--- a/css/components/card.css
+++ b/css/components/card.css
@@ -3,6 +3,7 @@
   display: flex;
   justify-content: space-between;
   column-gap: 24px;
+  row-gap: 24px;
 }
 /* Card */
 .card {
@@ -22,4 +23,26 @@
   width: 70%;
   margin: 8px auto;
   text-align: center;
+}
+
+@media (max-width: 800px) {
+  .cards {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .card {
+    height: fit-content;
+  }
+
+  h2 {
+    text-align: center;
+  }
+}
+
+@media (max-width: 360px) {
+  .card {
+    width: 90%;
+    min-width: 180px;
+  }
 }
