--- a/css/components/card.css
+++ b/css/components/card.css
@@ -1,21 +1,28 @@
 .cards {
-  margin: 32px 0;
+  margin: 24px 0;
   display: flex;
   justify-content: space-between;
   column-gap: 24px;
   row-gap: 24px;
 }
+
 /* Card */
 .card {
   border-radius: 8px;
   width: 300px;
-  height: 350px;
+  height: content;
   overflow: hidden;
   box-shadow: 2px 2px 8px 0px grey;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .card img {
-  width: 100%;
+  display: block;
+  width: 90%;
+  margin: 0 auto;
+  padding-top: 16px;
   object-fit: cover;
 }
 
@@ -29,10 +36,6 @@
   .cards {
     flex-direction: column;
     align-items: center;
-  }
-
-  .card {
-    height: fit-content;
   }
 
   h2 {
