--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 /* Fonts */
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Poppins:wght@700');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 /* Fontawesome */
 @import url('https://use.fontawesome.com/releases/v5.6.3/css/all.css');
@@ -24,6 +24,16 @@ section {
 h1, h2, h3, h4 {
   font-family: 'Poppins', sans-serif;
   margin: 0;
+}
+
+h1 {
+  font-weight: 500;
+}
+
+h2 {
+  font-size: 30px;
+  font-weight: 500;
+  margin-top: 24px;
 }
 
 p {
@@ -54,10 +64,11 @@ li {
   height: 400px;
   display: flex;
   justify-content: center;
+  align-items: center;
 }
 
 .banner p {
-  margin: 20px 0;
+  margin: 20px 0 80px 0;
 }
 
 .container {
@@ -79,6 +90,7 @@ li {
   align-content: center;
   padding: 20px;
   color: whitesmoke;
+  margin: 0 auto;
 }
 
 .footer p {
@@ -103,6 +115,13 @@ li {
 .fa-github {
   color: whitesmoke;
 }
+
+@media (max-width: 800px) {
+  .banner p {
+    margin: 0 0 20px 0;
+  }
+}
+
 
 @media (max-width: 360px) {
   .footer {
